# python_practice_projects

coffee_bot/: README.md  script.py
password_generator/: README.md  README.rst  pyproject.toml
password_generator/password_generator/: password_generator.py
password_generator/tests/: test_password_generator.py
