[tool.poetry]
name = "password_generator"
version = "0.0.1"
description = "Generate a password"
authors = ["SimonN <65023744+Simon994@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
